@@ -94,6 +94,9 @@ gboolean resize_window(void *data);
 gboolean set_play(void *data);
 gboolean set_pause(void *data);
 gboolean set_stop(void *data);
+gboolean set_ff(void *data);
+gboolean set_rew(void *data);
+gboolean set_position(void *data);
 gboolean set_volume(void *data);
 gboolean set_fullscreen(void *data);
 gboolean set_show_controls(void *data);
